Fix footer padding on mobile

--- a/assets/css/_bulma_tweaks.scss
+++ b/assets/css/_bulma_tweaks.scss
@@ -4,7 +4,7 @@
 }
 
 .footer.is-primary {
-  padding: 1em 0em 1.5em;
+  padding: 1em 1em 1.5em;
 }
 
 .section.flash-message {
